[package]
name = "lambstock"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A command line interface for browsing AWS lambdas"
documentation = "https://github.com/meetup/lambstock"
homepage = "https://github.com/meetup/lambstock"
repository = "https://github.com/meetup/lambstock"
keywords = ["aws", "lambda", "serverless"]
license = "MIT"
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
failure = "0.1"
futures = "0.1"
humansize  = "1.1"
lazy_static = "1.1"
rusoto_resourcegroupstaggingapi = "0.33"
rusoto_lambda = "0.33"
rusoto_credential = "0.12"
structopt = "0.2"
tokio = "0.1"
rusoto_core = "0.33"