[package]
name = "lambstock"
version = "0.0.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "A command line interface for browsing AWS lambdas"
documentation = "https://github.com/meetup/lambstock"
homepage = "https://github.com/meetup/lambstock"
repository = "https://github.com/meetup/lambstock"
keywords = ["aws", "lambda", "serverless"]
license = "MIT"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"
clap = "2.33"
failure = "0.1"
futures = "0.1"
futures-backoff = "0.1"
humansize  = "1.1"
rusoto_core = "0.39"
rusoto_lambda = "0.39"
rusoto_resourcegroupstaggingapi = "0.39"
structopt = "0.2"
tabwriter = "1.1"
tokio = "0.1"
